# airtook_video

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
airtook_video/: api.py  daily.py  hooks.py  modules.txt
airtook_video/airtook_video/: api.py  daily.py  hooks.py
airtook_video/airtook_video/doctype/video_consultation_session/: video_consultation_session.json  video_consultation_session.py
airtook_video/airtook_video/www/: video.html  video.py
airtook_video/airtook_video/www/video/: index.html  index.py
airtook_video/fixtures/: custom_field.json  doctype.json
airtook_video/www/: video.html  video.py
