[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airtook_video"
version = "0.0.1"
description = "AirTook video consultation endpoints"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Etuken Idung"}]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["airtook_video*"]
